# tic-tac-toe

./: CMakeLists.txt  Makefile  button.cpp  button.h  main.cpp  main.h  sprite.cpp  sprite.h
media/: blank.png.kra  o.png.kra  tic-tac-toe.png.kra  x.png.kra  x.png~
